[package]
name = "haupdown"
version = "0.1.0"
authors = ["EasyPost <oss@easypost.com."]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/EasyPost/haupdown"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
clap = "2"
rusqlite = "0.21"
log = "0.4"
env_logger = "0.7"
syslog = "5"
derive_more = "^0.99.5"
nix = "^0.17"
serde_derive = "1"
serde_json = "1"
serde = "1"

[dev-dependencies]
tempdir = "0.3"
