[package]
name = "haupdown"
version = "0.1.0"
description = "haproxy agent-check daemon"
authors = ["EasyPost <oss@easypost.com."]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/EasyPost/haupdown"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = "2"
rusqlite = "^0.24"
log = "0.4"
env_logger = "0.7"
syslog = "5"
thiserror = "1"
nix = "^0.23"
serde_derive = "1"
serde_json = "1"
serde = "1"

[dev-dependencies]
tempfile = "3"
